<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/login_sign_up_fragment_des"
        android:icon="@drawable/ic_user"
        android:title="@string/user_item_navigation_menu"
        app:showAsAction="withText" />
    <item
        android:id="@+id/shopping_fragment_des"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/shopping_cart_naviagtion_menu"
        app:showAsAction="withText" />
    <item
        android:id="@+id/category_fragment_des"
        android:icon="@drawable/ic_category"
        android:title="@string/category_item_navigation_menu"
        app:showAsAction="withText" />
    <item
        android:id="@+id/home_page_fragment_des"
        android:icon="@drawable/ic_home"
        android:title="@string/home_item_navigation_menu"
        app:showAsAction="withText" />
</menu>