<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.ShoppingListWithoutLoginFragment"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        android:background="@color/online_shop_light_gray">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_card_view"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_start"
            android:layout_margin="25dp"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/img_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_login" />

            <TextView
                android:id="@+id/text_card_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/iran_sans_mobile"
                android:text="@string/text_card_view_login"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_description_card_view_login"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="60dp"
                android:text="@string/text_description_card_view_login"
                android:textColor="@color/online_shop_dark_blue_gray" />

            <ImageView
                android:id="@+id/img_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="320dp"
                android:layout_marginLeft="320dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_left"
                android:src="@drawable/ic_left" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/img_list_empty"
            android:layout_width="130dp"
            android:layout_height="153dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/login_card_view"
            app:layout_constraintRight_toLeftOf="@id/guideline_vertical_start"
            app:layout_constraintLeft_toRightOf="@id/guideline_vertical_end"
            android:src="@drawable/task_list" />

        <TextView
            android:id="@+id/text_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_empty_list"
            app:layout_constraintTop_toBottomOf="@id/img_list_empty"
            app:layout_constraintRight_toLeftOf="@id/guideline_vertical_start"
            app:layout_constraintLeft_toRightOf="@id/guideline_vertical_end"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_shopp_list_empty"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/text_empty_list"
            android:text="@string/text_empty_list_shop"
            app:layout_constraintRight_toLeftOf="@id/guideline_vertical_start"
            app:layout_constraintLeft_toRightOf="@id/guideline_vertical_end"
            android:layout_marginTop="10dp"
            android:textColor="@color/black" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>