<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="settingViewModel"
            type="com.example.onlineshop.viewmodel.SettingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:textDirection="rtl"
        tools:context=".view.fragment.SettingFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.88" />


        <TextView
            android:id="@+id/text_view_sow_new_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_mobile"

            android:text="@string/text_show_new_products"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_start"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"/>

        <Switch
            android:id="@+id/switch_show_new_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:checked="true"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_start"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical_end"/>


        <TextView
            android:id="@+id/text_view_choose_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:fontFamily="@font/iran_sans_mobile"

            android:text="@string/text_choose_hour"
            app:layout_constraintTop_toBottomOf="@+id/text_view_sow_new_products"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"

            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/radio_group_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/text_view_choose_hour"
            >

            <RadioButton
                android:id="@+id/radio_btn_hour_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="3" />

            <RadioButton
                android:id="@+id/radio_btn_hout_five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5" />

            <RadioButton
                android:id="@+id/radio_btn_hour_eight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="8" />

            <RadioButton
                android:id="@+id/radio_btn_hour_twelve"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="12" />

            <EditText
                android:id="@+id/edit_text_custom_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/text_hint_select_custom_time"
                android:inputType="number" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_save_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:background="@drawable/btn_login"
            android:fontFamily="@font/iran_sans_mobile"
            android:text="@string/text_save_setting"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_end"
            app:backgroundTint="@color/online_shop_red" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>