<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.AddAddressFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:textDirection="rtl"

            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.004" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.88" />

        <ImageView
            android:id="@+id/img_view_map"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_start"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name_receiver"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/text_hint_name_receiver"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"

            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/img_view_map">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_receiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/iran_sans_mobile"
                android:paddingLeft="15sp"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_full_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/text_full_address"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"

            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_name_receiver">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/iran_sans_mobile"
                android:paddingLeft="15sp"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save_information_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/btn_login"
            android:fontFamily="@font/iran_sans_mobile"
            android:text="@string/text_save_address"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/online_shop_red"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_end"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>