<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        tools:context=".view.fragment.SinUpFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.96" />


        <ImageView
            android:id="@+id/img_view_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_start"
            app:layout_constraintRight_toLeftOf="@id/guideline_vertical_start"
            app:layout_constraintLeft_toRightOf="@id/guideline_vertical_end"
            android:src="@drawable/ic_down" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_sign_up"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/img_view_down"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:hint="@string/text_username_hint"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:fontFamily="@font/iran_sans_mobile"
                android:paddingLeft="15sp"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_sign_up"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/email_input_sign_up"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
                app:layout_constraintStart_toEndOf="@+id/guideline_vertical_start"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:hint="@string/text_hint_password_login"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:fontFamily="@font/iran_sans_mobile"
                    android:maxLength="10"
                    android:paddingLeft="15sp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/password_input_sign_up"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_start"
            app:layout_constraintStart_toEndOf="@+id/guideline_vertical_end"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_login"
            android:fontFamily="@font/iran_sans_mobile"
            android:text="@string/text_sign_up_button"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/online_shop_red" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>